# multi-agent-ai-system

./: .env.example  .gitignore  README.md  api.py  app.py  main.py  pyproject.toml  requirements.txt  scheduler.py
agents/: coder.py  planner.py  reporter.py  researcher.py  reviewer.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
memory/: shared_memory.py
tests/: test_llm_fallback.py
tools/: llm.py  notifier.py  pdf_generator.py  search_tool.py  sql_tool.py
workflows/: graph.py  human_loop.py
