[project]
name = "multi-agent-ai-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==0.5.0",
    "fpdf2>=2.8.7",
    "langchain==0.3.7",
    "langchain-groq>=0.3.2",
    "langgraph==0.2.39",
    "posthog<3.0.0",
    "python-dotenv==1.0.1",
    "schedule==1.2.1",
    "streamlit==1.39.0",
    "tavily-python==0.5.0",
]
